Apache --> Jetty Http Client migration
Apache Http Client is deprecated and slated for removal